unpackaged/main/default/objects/Product2/fields/General_Description_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Description_Comments__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>General Description/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>