unpackaged/main/default/objects/Product2/fields/Legacy_SKU_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SKU_Number__c</fullName>
    <description>created for TAGCRM-452, Legacy SKU Number for Product</description>
    <label>Legacy Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>