unpackaged/main/default/objects/Product2/fields/Legacy_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_ID__c</fullName>
    <description>created for TAGCRM-452, for Product</description>
    <label>Legacy System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>