unpackaged/main/default/objects/Product2/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFS/Exceedra</fullName>
            </value>
            <value>
                <fullName>AGI</fullName>
            </value>
            <value>
                <fullName>Agrian</fullName>
            </value>
            <value>
                <fullName>Decisive Farming</fullName>
            </value>
            <value>
                <fullName>Farm At Hand</fullName>
            </value>
            <value>
                <fullName>Feedlot Health</fullName>
            </value>
            <value>
                <fullName>Muddy Boots</fullName>
            </value>
            <value>
                <fullName>TELUS Agriculture</fullName>
            </value>
            <value>
                <fullName>TKXS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>