unpackaged/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Service</fullName>
            </value>
            <value>
                <fullName>Hardware Products</fullName>
            </value>
            <value>
                <fullName>License Revenue</fullName>
            </value>
            <value>
                <fullName>Maintenance Revenue</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Other Revenues</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>SaaS Subscription Revenue</fullName>
            </value>
            <value>
                <fullName>Service Agreements</fullName>
            </value>
            <value>
                <fullName>Third Party Software</fullName>
            </value>
            <value>
                <fullName>Intercompany revenues</fullName>
                <isActive>false</isActive>
                <label>Intercompany revenues</label>
            </value>
            <value>
                <fullName>Other revenues - SP</fullName>
                <isActive>false</isActive>
                <label>Other revenues - SP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>