unpackaged/main/default/objects/Product2/fields/Product_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Product_Lifecycle_Stage__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>Product Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Maturity</fullName>
            </value>
            <value>
                <fullName>Decline/EOL</fullName>
            </value>
            <value>
                <fullName>1 - Growth Products</fullName>
                <isActive>false</isActive>
                <label>1 - Growth Products</label>
            </value>
            <value>
                <fullName>2 - Stable Products</fullName>
                <isActive>false</isActive>
                <label>2 - Stable Products</label>
            </value>
            <value>
                <fullName>3 - Migrating Products</fullName>
                <isActive>false</isActive>
                <label>3 - Migrating Products</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>