unpackaged/main/default/objects/Product2/fields/Product_Sub_Family_NL4__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Family_NL4__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>Product Sub-Family [NL4]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Review 7</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>AFS Advanced Financials</fullName>
            </value>
            <value>
                <fullName>AFS Integration</fullName>
            </value>
            <value>
                <fullName>AFS Mobile</fullName>
            </value>
            <value>
                <fullName>AFS Order MgmtSystem</fullName>
            </value>
            <value>
                <fullName>AFS Order MgmtSystem Laptop</fullName>
            </value>
            <value>
                <fullName>AFS Order MgmtSystem Web v3</fullName>
            </value>
            <value>
                <fullName>AFS Order MgmtSystem Web v4.0</fullName>
            </value>
            <value>
                <fullName>AFS Retail Execution</fullName>
            </value>
            <value>
                <fullName>AFS StorsLink</fullName>
            </value>
            <value>
                <fullName>AFS Trade Promo MgmtRetail v3</fullName>
            </value>
            <value>
                <fullName>AFS Warehouse MgmtSystem (STD)</fullName>
            </value>
            <value>
                <fullName>AgCloud</fullName>
            </value>
            <value>
                <fullName>Agrian On Site Visit Domestic</fullName>
            </value>
            <value>
                <fullName>Agrian On Site Visit International</fullName>
            </value>
            <value>
                <fullName>Analytics Other</fullName>
            </value>
            <value>
                <fullName>API Developer Portal</fullName>
            </value>
            <value>
                <fullName>API Support and Ongoing Maintenance</fullName>
            </value>
            <value>
                <fullName>AS/400</fullName>
            </value>
            <value>
                <fullName>ASTRA</fullName>
            </value>
            <value>
                <fullName>Bakers Dozen</fullName>
            </value>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Crop Scouting</fullName>
            </value>
            <value>
                <fullName>Croptivity Agronomist Connection License</fullName>
            </value>
            <value>
                <fullName>Cultivator Suite</fullName>
            </value>
            <value>
                <fullName>Custom Application Development</fullName>
            </value>
            <value>
                <fullName>Custom Integration Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>