unpackaged/main/default/objects/Product2/fields/Reporting_Level__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Level__c</fullName>
    <description>created for TAGCRM-636</description>
    <label>Reporting Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware Products</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Software Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>