unpackaged/main/default/objects/Product2/fields/Revenue_Model__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Model__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>Revenue Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Recurring</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>