unpackaged/main/default/objects/Product2/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Prepaid Services</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Time and Materials</fullName>
            </value>
            <value>
                <fullName>Usage Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>