unpackaged/main/default/objects/Product2/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>Revision Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>