unpackaged/main/default/objects/Product2/fields/Revision_Status__c.field-meta.xml
<CustomField>
    <fullName>Revision_Status__c</fullName>
    <description>created for TAGCRM-932</description>
    <label>Revision Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>