unpackaged/main/default/objects/Product2/fields/Solution_Group_NL1__c.field-meta.xml
<CustomField>
    <fullName>Solution_Group_NL1__c</fullName>
    <description>created for TAGCRM-1062</description>
    <label>Solution Group [NL1]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics and Insights</fullName>
            </value>
            <value>
                <fullName>Integration Services &amp; IOT</fullName>
            </value>
            <value>
                <fullName>Integration Software</fullName>
            </value>
            <value>
                <fullName>Production Solutions</fullName>
            </value>
            <value>
                <fullName>Sales and Marketing Optimize</fullName>
            </value>
            <value>
                <fullName>Supply Chain Traceability &amp; Sustainability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>