unpackaged/main/default/objects/Product2/fields/Solution_Type_NL2__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type_NL2__c</fullName>
    <description>created for TAGCRM-1062</description>
    <label>Solution Type [NL2]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analysis Services</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Integration Services &amp; IOT</fullName>
            </value>
            <value>
                <fullName>Integration Software</fullName>
            </value>
            <value>
                <fullName>Marketing Optimisation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Production Management</fullName>
            </value>
            <value>
                <fullName>Rebate Management</fullName>
            </value>
            <value>
                <fullName>Retail Execution</fullName>
            </value>
            <value>
                <fullName>Services &amp; Customization</fullName>
            </value>
            <value>
                <fullName>Supply Chain Mgt</fullName>
            </value>
            <value>
                <fullName>TPM</fullName>
            </value>
            <value>
                <fullName>Traceability</fullName>
            </value>
            <value>
                <fullName>Waste and Sustainability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>