unpackaged/main/default/objects/Product2/validationRules/Revenue_Scheduling_Enabled_is_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Scheduling_Enabled_is_True</fullName>
    <active>true</active>
    <description>For TAGCRM-976</description>
    <errorConditionFormula>AND(CanUseRevenueSchedule = TRUE, OR(ISBLANK(TEXT( RevenueScheduleType )),ISBLANK(TEXT( Revenue_Type__c )),ISBLANK(TEXT(RevenueInstallmentPeriod)),ISBLANK( NumberOfRevenueInstallments )))</errorConditionFormula>
    <errorMessage>For Revenue Scheduling to be True: Revenue Schedule Type, Revenue Type, Revenue Instalment Period, Number Of Revenue Instalments need to be filled.</errorMessage>
</ValidationRule>